Fixed tags wrapping

--- a/assets/scss/_single.scss
+++ b/assets/scss/_single.scss
@@ -34,10 +34,10 @@
                 }
             }
 
-            &__tags{
+            &__tags{ 
 
                 margin-top: .5rem;
-                white-space: nowrap;
+                white-space: wrap;
 
                 a{
 
